Alignment balance persist working.
Also cleaned up trait div creation code.

--- a/templates/fa-trait.hbs
+++ b/templates/fa-trait.hbs
@@ -1,9 +1,7 @@
 <div>
     <label>{{localize "SW5EFA.ForceAlign"}}</label>
     <a
-        class="trait-selector"
-        data-options="forceAlignment"
-        data-target="system.traits.fa"
+        class="trait-selector force-alignment"
         title="{{localize 'SW5E.TraitConfig' trait=(localize 'SW5EFA.ForceAlign')}}"
     >
         <i class="fas fa-edit"></i>
