--- a/templates/force-alignment.hbs
+++ b/templates/force-alignment.hbs
@@ -2,7 +2,7 @@
 
 <div>
     <h3>Current Alignment</h3>
-    <div><button>+1<br>Dark</button></div>
+    <div><button>+1 Light</button></div>
     <div>{{balance}}</div>
-    <div><button>+1<br>Light</button></div>
+    <div><button>+1 Dark</button></div>
 </div>
