--- a/templates/force-alignment.hbs
+++ b/templates/force-alignment.hbs
@@ -14,9 +14,14 @@
             <div><button id="sw5efa-dark" class="sw5efa-ldbutton">Dark</button></div>
             <br>
             <table id="sw5efa-transaction-log">
-                <tr><th>TIMESTAMP</th><th>DELTA</th><th>REASON</th></tr>
+                <tr><th>TIMESTAMP</th><th>DELTA</th><th>REASON</th><th></th></tr>
                 {{#eachTransaction}}
-                <tr><td>{{timestamp}}</td><td>{{delta}}</td><td>{{reason}}</td></tr>
+                <tr><td>{{timestamp}}</td><td>{{delta}}</td><td>{{reason}}</td>
+                    <td><a title="Roll back change" class="sw5efa-rollback-link" id="sw5efa-{{rawTimestamp}}">
+                            <i class="fas fa-undo" id="sw5efa-{{rawTimestamp}}"></i>
+                        </a>
+                    </td>
+                </tr>
                 {{/eachTransaction}}
             </table>
         </div>
