--- a/templates/force-alignment.hbs
+++ b/templates/force-alignment.hbs
@@ -6,24 +6,6 @@
     <p>for now, here's the numerical balance: {{balance}}</p>
 
     {{#ifGM}}
-        <div id="sw5efa-gm-only">
-            <div><p>Current Force Alignment balance: {{balance}}</p></div>
-            <div><button id="sw5efa-light" class="sw5efa-ldbutton">Light</button></div>
-            <label>change amount: </label><input type="number" id="sw5efa-delta" max=200 value=1><br>
-            <label>reason:        </label><input type="text" id="sw5efa-reason" value="GM adjustment"><br>
-            <div><button id="sw5efa-dark" class="sw5efa-ldbutton">Dark</button></div>
-            <br>
-            <table id="sw5efa-transaction-log">
-                <tr><th>TIMESTAMP</th><th>DELTA</th><th>REASON</th><th></th></tr>
-                {{#eachTransaction}}
-                <tr><td>{{timestamp}}</td><td>{{delta}}</td><td>{{reason}}</td>
-                    <td><a title="Roll back change" class="sw5efa-rollback-link" id="sw5efa-{{rawTimestamp}}">
-                            <i class="fas fa-undo" id="sw5efa-{{rawTimestamp}}"></i>
-                        </a>
-                    </td>
-                </tr>
-                {{/eachTransaction}}
-            </table>
-        </div>
+        <button id="sw5efa-gmbutton">Modify Character Force Alignment</button>
     {{/ifGM}}
 </div>
