Added spectrum and ticker to FA dialog.
This is visible to players.  Seems to track properly with FA balance.

--- a/templates/force-alignment.hbs
+++ b/templates/force-alignment.hbs
@@ -1,9 +1,32 @@
-<p>Information on force alignment to be displayed here.</p>
-
 <div>
-    <h3>Current Alignment</h3>
-    <p>....place image here...</p>
-    <p>for now, here's the numerical balance: {{balance}}</p>
+    <h3>Force Alignment</h3>
+    <div id="sw5efa-light-dark-spectrum" class="sw5efa-facols">
+        <img id="sw5efa-vertbar" src="{{imgPath}}/vertbar.webp" width="100" height="650">
+        <img id="sw5efa-ticker"  src="{{imgPath}}/ticker.webp" style="top: {{tickerOffset}}px">
+    </div>
+    <div id="sw5efa-lds-features" class="sw5efa-facols">
+        <div class="sw5efa-feature" id="sw5efa-T5MajB"><strong>Luminous Being</strong></div>
+        <div class="sw5efa-feature" id="sw5efa-T5MinB"><strong>Tier V Minor Benevolence</strong></div>
+        <div class="sw5efa-feature" id="sw5efa-T4MajB"><strong>Tier IV Major Benevolence</strong></div>
+        <div class="sw5efa-feature" id="sw5efa-T4MinB"><strong>Tier IV Minor Benevolence</strong></div>
+        <div class="sw5efa-feature" id="sw5efa-T3MajB"><strong>Tier III Major Benevolence</strong></div>
+        <div class="sw5efa-feature" id="sw5efa-T3MinB"><strong>Tier III Minor Benevolence</strong></div>
+        <div class="sw5efa-feature" id="sw5efa-T2MajB"><strong>Tier II Major Benevolence</strong></div>
+        <div class="sw5efa-feature" id="sw5efa-T2MinB"><strong>Tier II Minor Benevolence</strong></div>
+        <div class="sw5efa-feature" id="sw5efa-T1MajB"><strong>Tier I Major Benevolence</strong></div>
+        <div class="sw5efa-feature" id="sw5efa-T1MinB"><strong>Tier I Minor Benevolence</strong></div>
+        <div class="sw5efa-feature"></div>
+        <div class="sw5efa-feature" id="sw5efa-T1MinC"><strong>Tier I Minor Corruption</strong></div>
+        <div class="sw5efa-feature" id="sw5efa-T1MinC"><strong>Tier I Minor Corruption</strong></div>
+        <div class="sw5efa-feature" id="sw5efa-T2MinC"><strong>Tier II Minor Corruption</strong></div>
+        <div class="sw5efa-feature" id="sw5efa-T2MinC"><strong>Tier II Minor Corruption</strong></div>
+        <div class="sw5efa-feature" id="sw5efa-T3MinC"><strong>Tier III Minor Corruption</strong></div>
+        <div class="sw5efa-feature" id="sw5efa-T3MinC"><strong>Tier III Minor Corruption</strong></div>
+        <div class="sw5efa-feature" id="sw5efa-T4MinC"><strong>Tier IV Minor Corruption</strong></div>
+        <div class="sw5efa-feature" id="sw5efa-T4MinC"><strong>Tier IV Minor Corruption</strong></div>
+        <div class="sw5efa-feature" id="sw5efa-T5MinC"><strong>Tier V Minor Corruption</strong></div>
+        <div class="sw5efa-feature" id="sw5efa-T5MajC"><strong>Dark Entity</strong></div>
+    </div>
 
     {{#ifGM}}
         <button id="sw5efa-gmbutton">Modify Character Force Alignment</button>
